# earn_vaults

./: .dockerfile  .dockerignore  .gitignore  .nixpacks.toml  Cargo.toml  Dockerfile  README.md  build.rs  deploy.sh  deploy.txt  deploy.yml  dockerfile  dockerignore.txt  railway.toml  script.js
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  deploy_old.yml
assets/: Dockerfile  script.js  styles.css
src/: admin.rs  ai.rs  auth.rs  db.rs  main.rs  tasks.rs
src/cpp/: hello.cpp
static/: admin.html  dashboard.html  index.html  login.html  sign_up.html
