[package]
name = "earn_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Database (SQLite with bundled support)
rusqlite = { version = "0.29", features = ["bundled"] }

# Date and time utilities
chrono = { version = "0.4", features = ["serde"] }

# AI Dependencies
rust-bert = "0.23.0"  # Updated to a version compatible with tch 0.19.0
tch = "0.19.0"       # Updated to work with current PyTorch versions
openai = "1.0"       # OpenAI API for chat and automation

# Authentication
jsonwebtoken = "9"   # JWT support

# Environment variables
dotenvy = "0.15"     # For loading .env files

# Logging
log = "0.4"
env_logger = "0.10"

# Concurrency utilities
async-trait = "0.1"

# Filesystem utilities
fs_extra = "1.3"

# HTTP client (for webhook and secret fetching)
reqwest = { version = "0.11", features = ["json"] }