[package]
name = "earn_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Database (SQLite with bundled support)
rusqlite = { version = "0.29", features = ["bundled"] }

# Date and time utilities
chrono = { version = "0.4", features = ["serde"] }

# AI Dependencies
rust-bert = "0.23.0"  # Expects tch ^0.17.0
tch = "0.17.0"        # Aligned with rust-bert dependency
openai = "1.0"        # OpenAI API for chat and automation

# Authentication
jsonwebtoken = "9"    # JWT support

# Environment variables
dotenvy = "0.15"      # For loading .env files

# Logging
log = "0.4"
env_logger = "0.10"

# Concurrency utilities
async-trait = "0.1"

# Filesystem utilities
fs_extra = "1.3"

# HTTP client (for webhook and secret fetching)
reqwest = { version = "0.11", features = ["json"] }

# C++ integration (for compiling C++ code inside Rust)
cc = "1.0"

[build-dependencies]
cc = "1.0"  # Required for compiling C++ code via build.rs

[profile.release]
opt-level = 3            # Maximum optimization level
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Use a single codegen unit for better optimizations
panic = "abort"          # Abort on panic to reduce overhead
incremental = false      # Disable incremental compilation for release builds
